<resources>
    <string name="app_name">TravelingTogether</string>
    <string name="button_enter">Войти</string>
    <string name="button_register">Регистарация</string>
    <string name="password_input">Password</string>
    <string name="email_input">Email</string>
    <string name="register_text">Регистрация</string>
    <string name="register_name">Имя</string>
    <string name="register_familyname">Фамилия</string>
    <string name="route_where">Откуда</string>
    <string name="route_to">Куда</string>
    <string name="route_date">Дата</string>
    <string name="route_text">Маршрут</string>
    <string name="route_create">Создать поездку</string>
    <string name="route_find">Найти</string>
    <string name="profile_text">Профиль</string>
    <string name="profile_name">Джон</string>
    <string name="profile_email">qwerty123@gmail.com</string>
    <string name="free_seats">Free seats: %d</string>
    <string name="price">Price: %d</string>
    <string name="where_text">Откуда: </string>
    <string name="to_text">Куда: </string>
    <string name="price_text">Цена: </string>
    <string name="create_travel_text">Создание поездки</string>
    <string name="car">Машина</string>
    <string name="car_name">Название: </string>
    <string name="car_number">Номер: </string>
    <string name="car_num_of">Кол-во мест: </string>
    <string name="car_name_str">Reanault Logan</string>
    <string name="car_number_str">Т861АК 777RU</string>
    <string name="car_num_of_str">4</string>
    <string name="active_travels">Активные поездки</string>

    <string-array name="cities">
        <item>Брянск</item>
        <item>Москва</item>
        <item>Новгород</item>
        <item>Смоленск</item>
    </string-array>
    <string-array name="cities2">
        <item>Москва</item>
        <item>Брянск</item>
        <item>Новгород</item>
        <item>Смоленск</item>
    </string-array>

</resources>