<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/profile_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="335dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/create_travel_text"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_white_rounded"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="25px"
        android:text="@string/price_text"
        android:textColor="#084B97"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_white_rounded"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="25px"
        android:text="@string/to_text"
        android:textColor="#084B97"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_white_rounded"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="25px"
        android:text="@string/where_text"
        android:textColor="#084B97"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:backgroundTint="@color/white"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName3"
        app:srcCompat="@drawable/profile" />

    <View
        android:id="@+id/view6"
        android:layout_width="380dp"
        android:layout_height="250dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_white_rounded"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@+id/view6"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:srcCompat="@drawable/car" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="102dp"
        android:layout_height="33dp"
        android:text="@string/car"
        android:textColor="#084B97"
        android:textSize="26dp"
        app:layout_constraintEnd_toEndOf="@+id/view6"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/view6"
        tools:layout_editor_absoluteY="298dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:text="@string/car_name"
        android:textColor="#084B97"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="@+id/imageView12" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/car_number"
        android:textColor="#084B97"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/car_num_of"
        android:textColor="#084B97"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="146dp"
        android:layout_height="36dp"
        android:backgroundTint="#fff"
        android:ems="10"
        android:hint="@string/car_name_str"
        android:inputType="textPersonName"
        android:paddingLeft="-2px"
        android:text="@string/car_name_str"
        android:textColor="#084B97"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="146dp"
        android:layout_height="36dp"
        android:backgroundTint="#fff"
        android:ems="10"
        android:hint="@string/car_number_str"
        android:inputType="textPersonName"
        android:paddingLeft="-2px"
        android:text="@string/car_number_str"
        android:textColor="#084B97"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="146dp"
        android:layout_height="36dp"
        android:backgroundTint="#fff"
        android:ems="10"
        android:hint="@string/car_num_of_str"
        android:inputType="textPersonName"
        android:paddingLeft="-2px"
        android:text="@string/car_num_of_str"
        android:textColor="#084B97"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />
</androidx.constraintlayout.widget.ConstraintLayout>