<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view_route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/map_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="371dp"
        android:layout_height="147dp"
        android:layout_marginTop="156dp"
        app:layout_constraintEnd_toEndOf="@+id/view_route"
        app:layout_constraintStart_toStartOf="@+id/view_route"
        app:layout_constraintTop_toTopOf="@+id/view_route"
        app:srcCompat="@drawable/rout_bg" />

    <Spinner
        android:id="@+id/button4"
        android:layout_width="125dp"
        android:layout_height="37dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="52dp"
        android:background="#fff"
        android:entries="@array/cities"
        android:paddingLeft="25px"
        android:textAlignment="center"
        android:textColor="#085CB8"
        app:cornerRadius="0px"
        app:iconGravity="textStart"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <Button
        android:id="@+id/open_calendar"
        android:layout_width="134dp"
        android:layout_height="49dp"
        android:layout_marginStart="225dp"
        android:layout_marginTop="202dp"
        android:backgroundTint="#FFFFFF"
        android:shadowRadius="0"
        android:text="@string/route_date"
        android:textAlignment="textStart"
        android:textColor="#085CB8"
        app:cornerRadius="45px"
        app:icon="@drawable/calendar"
        app:iconGravity="end"
        app:iconTint="#085CB7"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/button3"
        android:layout_width="129dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/bg_white_rounded"
        android:entries="@array/cities"
        android:textAlignment="textStart"
        android:textColor="#085CB8"
        app:cornerRadius="45px"
        app:icon="@drawable/img_for_btn"
        app:iconGravity="end"
        app:iconTint="#085CB5"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="227dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/route_text"
        android:textColor="#085CB9"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="187dp"
        android:layout_height="41dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/white"
        android:text="@string/route_create"
        android:textAlignment="textStart"
        android:textColor="#085CB7"
        android:textSize="12sp"
        app:cornerRadius="48px"
        app:icon="@drawable/group_1"
        app:iconGravity="end"
        app:iconTint="#085CB6"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="91dp"
        android:layout_height="36dp"
        android:backgroundTint="#FF085CB6"
        android:text="@string/route_find"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:cornerRadius="45px"
        tools:layout_editor_absoluteX="288dp"
        tools:layout_editor_absoluteY="287dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/price" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/imageView6"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:srcCompat="@drawable/protect" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:srcCompat="@drawable/speed" />


</androidx.constraintlayout.widget.ConstraintLayout>